Centered player and URL

--- a/html/index.html
+++ b/html/index.html
@@ -24,13 +24,16 @@
 
       <!-- MAIN -->
       <main>
-        <div style="width:100%;">
-          <div class="url">
-            <input id="url"  type="text"   value="CKI7MnfBYJA" />
-            <input id="load" type="button" value="Load" onclick="load(event)" />
-          </div>
+        <div>
+          
+          <div id="container">
+            <div class="url">
+              <input id="url"  type="text"   value="CKI7MnfBYJA" />
+              <input id="load" type="button" value="Load" onclick="load(event)" />
+            </div>
 
-          <div id="player"></div>
+            <div id="player" class="player"></div>
+          </div>
 
           <!-- https://w3c.github.io/aria-practices/examples/slider/multithumb-slider.html -->
           <div class="aria-widget-slider">
