Fixed layout issue with controls

--- a/html/index.html
+++ b/html/index.html
@@ -40,8 +40,8 @@
 
           <div id="controls" class="controls">
             <!-- https://w3c.github.io/aria-practices/examples/slider/multithumb-slider.html -->
-            <div class="aria-widget-slider">
-              <div class="rail" style="width: 638px;">
+            <div class="slider">
+              <div class="rail" style="width:640px;">
                 <img id="start"
                       src="images/min-arrow.png"
                       role="slider"
@@ -65,7 +65,7 @@
             <div id="other">
               <input id="loop" type="checkbox">
               <label for="loop">Loop</label>
-              <input id="strech" type="checkbox">
+              <input id="stretch" type="checkbox">
               <label for="stretch">Stretch</label>
             </div>
           </div>
