Implemented 'start' slider handler

--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,9 @@
 
             <div style="position:relative;">
               <div id="player" class="player"></div>
-              <div id="loading" class="overlay"</div>
+              <div id="loading" class="overlay">
+                <img src="images/youtube-brands.svg" draggable="false" />
+              </div>
             </div>
           </div>
 
