Implemented 'end' slider handler

--- a/html/index.html
+++ b/html/index.html
@@ -65,10 +65,10 @@
             <input id="from" type="text" class="time" readonly />
             <input id="to"   type="text" class="time" readonly />
             <div id="other">
-              <input id="loop" type="checkbox">
               <label for="loop">Loop</label>
-              <input id="stretch" type="checkbox">
-              <label for="stretch">Stretch</label>
+              <input id="loop" type="checkbox">
+              <label for="delay">Loop delay</label>
+              <input id="delay" type="input" value="0" />
             </div>
           </div>
 
