Parsed YouTube URL to get video ID

--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
           
           <div id="container">
             <div class="url">
-              <input id="url"  type="text" placeholder="YouTube URL"  value="CKI7MnfBYJA" readonly />
+              <input id="url"  type="text" placeholder="YouTube URL" value="https://www.youtube.com/watch?v=CKI7MnfBYJA" readonly />
               <input id="load" type="button" value="Load" onclick="load(event)" disabled />
             </div>
 
