Reworked slider thumbs to align with video timeline

--- a/html/index.html
+++ b/html/index.html
@@ -48,21 +48,23 @@
             <div class="slider">
               <div class="rail" style="width:640px;">
                 <img id="start"
-                      src="images/min-arrow.png"
-                      role="slider"
-                      tabindex="0"
-                      class="min thumb"
-                      aria-valuemin="0"
-                      aria-valuenow="0"
-                      aria-valuemax="100">
+                     src="images/min-arrow.svg"
+                     role="slider"
+                     tabindex="0"
+                     class="min thumb"
+                     aria-valuemin="0"
+                     aria-valuenow="0"
+                     aria-valuemax="100"
+                     draggable="false">
                 <img id="end"
-                       src="images/max-arrow.png"
-                       role="slider"
-                       tabindex="0"
-                       class="max thumb"
-                       aria-valuemin="0"
-                       aria-valuenow="100"
-                       aria-valuemax="100">
+                     src="images/max-arrow.svg"
+                     role="slider"
+                     tabindex="0"
+                     class="max thumb"
+                     aria-valuemin="0"
+                     aria-valuenow="100"
+                     aria-valuemax="100"
+                     draggable="false">
              </div>
             </div>
             <input id="from" type="text" class="time" readonly />
