--- a/html/index.html
+++ b/html/index.html
@@ -28,57 +28,68 @@
       <!-- MAIN -->
       <main>
         <div>
-          
           <div id="container">
-            <div class="url panel">
+
+            <div id="file" class="url panel">
               <input id="url"  type="text" placeholder="YouTube URL" value="https://www.youtube.com/watch?v=CKI7MnfBYJA" readonly />
               <input id="load" type="button" value="Load" onclick="load(event)" disabled />
             </div>
 
-            <div class="panel" style="position:relative;">
+            <div id="video" class="panel" style="position:relative;">
               <div id="player" class="player"></div>
               <div id="loading" class="overlay">
                 <img src="images/youtube-brands.svg" draggable="false" />
               </div>
             </div>
-          </div>
 
-          <div id="controls" class="controls panel">
-            <!-- https://w3c.github.io/aria-practices/examples/slider/multithumb-slider.html -->
-            <div class="slider">
-              <div class="rail" style="width:640px;">
-                <img id="start"
-                     src="images/min-arrow.svg"
-                     role="slider"
-                     tabindex="0"
-                     class="min thumb"
-                     aria-valuemin="0"
-                     aria-valuenow="0"
-                     aria-valuemax="100"
-                     draggable="false">
-                <img id="end"
-                     src="images/max-arrow.svg"
-                     role="slider"
-                     tabindex="0"
-                     class="max thumb"
-                     aria-valuemin="0"
-                     aria-valuenow="100"
-                     aria-valuemax="100"
-                     draggable="false">
-             </div>
+            <div id="tap" class="panel" tabindex="-1">
+              <div id="pad" class="pad" tabindex="0" onkeydown="onTap(event)" data-state="idle">
+                <p class="cued" >
+                  Press 'SPACE' to start video. <br/><br/>While the video is playing, press 'SPACE' on each beat of the song
+                </p>
+                <p class="playing">
+                  Press 'SPACE' on each beat or:<br/><br/>&#8226;&nbsp;'P' to pause<br/>&#8226;&nbsp;'S' to stop
+                </p>
+              </div>
             </div>
-            <input id="from" type="text" class="time" readonly />
-            <input id="to"   type="text" class="time" readonly />
-            <div id="other">
-              <label id="loop">
-                <input type="checkbox" onclick="onLoop(event)" />
-                <img class="no"  src="images/redo-alt-solid.svg" draggable="false" />
-                <img class="yes" src="images/redo-alt-solid.svg" draggable="false" />
-              </label>
-              <input id="delay" type="number" min="0" max="10" placeholder="loop delay" value="1.0" />
-            </div>
-          </div>
 
+            <div id="controls" class="controls panel">
+              <!-- https://w3c.github.io/aria-practices/examples/slider/multithumb-slider.html -->
+              <div class="slider">
+                <div class="rail" style="width:640px;">
+                  <img id="start"
+                       src="images/min-arrow.svg"
+                       role="slider"
+                       tabindex="0"
+                       class="min thumb"
+                       aria-valuemin="0"
+                       aria-valuenow="0"
+                       aria-valuemax="100"
+                       draggable="false">
+                  <img id="end"
+                       src="images/max-arrow.svg"
+                       role="slider"
+                       tabindex="0"
+                       class="max thumb"
+                       aria-valuemin="0"
+                       aria-valuenow="100"
+                       aria-valuemax="100"
+                       draggable="false">
+               </div>
+              </div>
+              <input id="from" type="text" class="time" readonly />
+              <input id="to"   type="text" class="time" readonly />
+              <div id="other">
+                <label id="loop">
+                  <input type="checkbox" onclick="onLoop(event)" />
+                  <img class="no"  src="images/redo-alt-solid.svg" draggable="false" />
+                  <img class="yes" src="images/redo-alt-solid.svg" draggable="false" />
+                </label>
+                <input id="delay" type="number" min="0" max="10" placeholder="loop delay" value="1.0" />
+              </div>
+            </div>
+
+          </div>
         </div>
       </main>
 
