Draws tapped beats

--- a/html/index.html
+++ b/html/index.html
@@ -92,12 +92,18 @@
               </div>
             </div>
 
-          </div>
+            <div id="taps">
+              <div id="current">
+                <canvas class="taps all" width="640" height="8"></canvas>
+                <canvas class="taps zoomed" width="640" height="8"></canvas>
+              </div>
+              <div id="history">
+                <canvas class="taps all" width="640" height="8"></canvas>
+                <canvas class="taps zoomed" width="640" height="8"></canvas>
+              </div>
+            </div>
 
-          <div>
-            <textarea id="taps" style="width:640px; height=80px;"></textarea>
           </div>
-
         </div>
       </main>
 
