Added 'INSUFFICIENT DATA' message

--- a/html/index.html
+++ b/html/index.html
@@ -120,6 +120,9 @@
                 <canvas class="taps all" width="640" height="8"></canvas>
                 <canvas class="taps zoomed" width="640" height="8"></canvas>
               </div>
+              <div id="nodata">
+                <p>-- NOT ENOUGH DATA --</p>
+              </div>
             </div>
 
           </div>
