--- a/html/index.html
+++ b/html/index.html
@@ -142,7 +142,7 @@
               <button type="button" disabled>
                 <img src="images/file-export-solid.svg" />
               </button>
-              <button type="button" disabled>
+              <button type="button"  onclick="clearTaps(event)" >
                 <img src="images/trash-solid.svg" />
               </button>
             </div>
