--- a/html/index.html
+++ b/html/index.html
@@ -169,6 +169,8 @@
         playerVars: {
           fs: 0,
           controls: 1,
+          disablekb: 1,
+          rel: 0,
           autoplay: 0,
           loop: 0,
           modestbranding: 1,
