Migrated package from twystd to transcriptaze

--- a/html/index.html
+++ b/html/index.html
@@ -29,15 +29,15 @@
       <!-- HEADER -->
       <header>
         <img id="logo" src="images/logo.png"  />
-        <div id="banner" />
+        <div id="banner"></div>
+        <div id="github">
+         <a href="https://github.com/transcriptaze/transcriptaze.github.io">GitHub</a>
+        </div>
       </header>
 
       <!-- NAV -->
 
       <nav>
-        <ul>
-          <li class="selected">T2B</li>
-        </ul>
       </nav>
 
       <!-- MAIN -->
